--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.7",
+    "bootstrap-vue-next": "^0.30.4",
     "vue": "^3.5.17"
   },
   "devDependencies": {
